# mini-render

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  TEMPLATE.md
include/mrender/: http.hh  manager.hh  parse.hh  render.hh  template.hh
src/: http.cc  main.cc  manager.cc  parse.cc  template.cc
templates/: duck.template  example.json
